# manifold-explorer

./: CMakeLists.txt
algebra/: Arithmetic.hpp  CMakeLists.txt  ErrorMessage.cpp  ErrorMessage.hpp  PrintingUtils.cpp  PrintingUtils.hpp  StringUtils.cpp
algebra/Algebra/: AlgebraicExpr.natvis  AstToExpr.cpp  AstToExpr.hpp  ConstructionHelpers.cpp  ConstructionHelpers.hpp  Context.cpp  Context.hpp  Derivative.cpp  Derivative.hpp  Expr.cpp  Expr.hpp  Functions.cpp  Functions.hpp  Integral.cpp  Integral.hpp  OdeSolve.cpp  OdeSolve.hpp  Polynomial.cpp  Polynomial.hpp  PrintExpr.cpp  PrintExpr.hpp  Simplification.cpp  Simplification.hpp  fraction_standard_from.txt  switch_over_algebraic_expr.txt  tree_traversal.txt
algebra/Parsing/: Ast.cpp  Ast.hpp  AstAllocator.cpp  AstAllocator.hpp  AstEquals.cpp  AstEquals.hpp  AstPrint.cpp  AstPrint.hpp  CharUtils.cpp  CharUtils.hpp  OstreamParserMessageHandler.cpp  OstreamParserMessageHandler.hpp  OstreamScannerMessageHandler.cpp  OstreamScannerMessageHandler.hpp  Parser.cpp  Parser.hpp  ParserMessageHandler.hpp  Scanner.cpp  Scanner.hpp  ScannerMessageHandler.hpp  SourceInfo.cpp  SourceInfo.hpp  Token.cpp  Token.hpp  parsing_ambiguities.txt
algebra/Utils/: Assertions.cpp  Assertions.hpp  CrashReport.cpp  List.hpp  List.natvis  Put.cpp  Put.hpp  Types.hpp  View.hpp  View.natvis
game/: CMakeLists.txt  ideas.txt  main.cpp
test/: CMakeLists.txt  RandomExprGenerator.cpp  RandomExprGenerator.hpp  TestRunner.cpp  TestRunner.hpp  TestingParserMessageHandler.cpp  TestingParserMessageHandler.hpp  TestingScannerMessageHandler.cpp  TestingScannerMessageHandler.hpp  Utils.cpp  Utils.hpp  randomTestsMain.cpp  randomTestsMain.hpp  tests.cpp
